--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -73,7 +73,7 @@
 			<span id="uptime#id#"></span>
 		</div>
 		<script>
-			const item_uptime = document.querySelector('#uptime#id#');
+			const item_uptime#id# = document.querySelector('#uptime#id#');
 			if (item_uptime !== null) {
 				if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 					item_uptime.innerHTML = '<span>#uptime#</span>';
