--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -73,10 +73,10 @@
 			<span id="uptime#id#"></span>
 		</div>
 		<script>
-			const item_uptime#id# = document.querySelector('#uptime#id#');
-			if (item_uptime !== null) {
+			const item_uptime[#id#] = document.querySelector('#uptime#id#');
+			if (item_uptime[#id#] !== null) {
 				if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-					item_uptime.innerHTML = '<span>#uptime#</span>';
+					item_uptime[#id#].innerHTML = '<span>#uptime#</span>';
 					// $('#uptime#id#').append('<span>#uptime#</span>');
 				}
 			}
