--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -13,46 +13,46 @@
 		</span>
 	</div>
 	<div class="cmds text-left" style="display:block">
-		<div class="cmd tooltips" data-cmd_id="#namedistriid#" style="margin-left:5px;display: #namedistri_display#">
+		<div class="tooltips" data-cmd_id="#namedistriid#" style="margin-left:5px;display: #namedistri_display#">
 			<span title="Distribution Linux</br><i>Date de valeur : #namedistri_value#</br>Date de collecte : #namedistri_collect#</i>" class="fab fa-linux" style="min-width:15px"></span>
 			<span>#namedistri#</span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#uptimeid#" style="margin-left:5px;display: #uptime_display#">
+		<div class="tooltips" data-cmd_id="#uptimeid#" style="margin-left:5px;display: #uptime_display#">
 			<span title="Temps d'Activité (UpTime)</br><i>Date de valeur : #uptime_value#</br>Date de collecte : #uptime_collect#</i>" class="fas fa-tachometer-alt" style="min-width:15px;"></span>
 			<span id="uptime#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#loadavgid#" style="margin-left:5px;display: #loadavg_display#">
+		<div class="tooltips" data-cmd_id="#loadavgid#" style="margin-left:5px;display: #loadavg_display#">
 			<span title="Charge Système (Load Average)</br><i>Date de valeur : #loadavg_value#</br>Date de collecte : #loadavg_collect#</i>" class="fa techno-courbes3" style="width:15px;"></span>
 			<span id="loadavg1mn#id#"></span><span id="loadavg5mn#id#"></span><span id="loadavg15mn#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#Mempourcid#" style="margin-left:5px;display: #Mem_display#">
+		<div class="tooltips" data-cmd_id="#Mempourcid#" style="margin-left:5px;display: #Mem_display#">
 			<span title="Mémoire Vive (% Libre)</br><i>Date de valeur : #Mem_value#</br>Date de collecte : #Mem_collect#</i>" class="fa techno-memory" style="width:15px;"></span>
 			<span id="Mempourcent#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#Swappourcid#" style="margin-left:5px;display: #Mem_swap_display#">
+		<div class="tooltips" data-cmd_id="#Swappourcid#" style="margin-left:5px;display: #Mem_swap_display#">
 			<span title="Mémoire Swap (% Libre)</br><i>Date de valeur : #Mem_swap_value#</br>Date de collecte : #Mem_swap_collect#</i>" class="fas fa-list" style="width:15px;"></span>
 			<span id="Swappourc#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#ethernet0id#" style="margin-left:5px;display: #ethernet0_display#">
+		<div class="tooltips" data-cmd_id="#ethernet0id#" style="margin-left:5px;display: #ethernet0_display#">
 			<span title="Trafic Réseau (#ethernet0_name#)</br><i>Date de valeur : #ethernet0_value#</br>Date de collecte : #ethernet0_collect#</i>" class="fa techno-fleches" style="width:15px;"></span>
 			<span id="ethernet0#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#hddpourcusedid#" style="margin-left:5px;display: #hddused_display#">
+		<div class="tooltips" data-cmd_id="#hddpourcusedid#" style="margin-left:5px;display: #hddused_display#">
 			<span title="Espace Disque (% Utilisé)</br><i>Date de valeur : #hddtotal_value#</br>Date de collecte : #hddtotal_collect#</i>" class="fas fa-hdd" style="width:15px;"></span>
 			<span id="hddpourcused#id#"></span>
 		</div>
 		<div id="synovol2#id#"></div>
 		<div id="synovolusb#id#"></div>
 		<div id="synovolesata#id#"></div>
-		<div class="cmd tooltips" data-cmd_id="#cpu_tempid#" style="margin-left:5px;display: #cpu_display#">
+		<div class="tooltips" data-cmd_id="#cpu_tempid#" style="margin-left:5px;display: #cpu_display#">
 			<span title="Nombre CPU - Fréquence (Température)</br><i>Date de valeur : #cpu_value#</br>Date de collecte : #cpu_collect#</i>" class="fa techno-pc" style="width:15px;"></span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#perso1id#" style="margin-left:5px;display: #perso1_display#">
+		<div class="tooltips" data-cmd_id="#perso1id#" style="margin-left:5px;display: #perso1_display#">
 			<span class="fa" title="#nameperso1#</br><i>Date de valeur : #perso1_value#</br>Date de collecte : #perso1_collect#</i>" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso1#</span>
 			<span id="uniteperso1#id#"></span>
 		</div>
-		<div class="cmd tooltips" data-cmd_id="#perso2id#" style="margin-left:5px;display: #perso2_display#">
+		<div class="tooltips" data-cmd_id="#perso2id#" style="margin-left:5px;display: #perso2_display#">
 			<span class="fa" title="#nameperso2#</br><i>Date de valeur : #perso2_value#</br>Date de collecte : #perso2_collect#</i>" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso2#</span>
 			<span id="uniteperso2#id#"></span>
 		</div>
@@ -183,7 +183,7 @@
 		}
 
 		if ('#synovolume2_display#' == 'OK' && document.querySelector('#synovol2#id#') !== null && document.querySelector('#hddpourcusedv2#id#') !== null) {
-			document.querySelector('#synovol2#id#').innerHTML = '<div id="synovol2#id#" class="cmd tooltips" data-cmd_id="#hddpourcusedv2id#" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Syno Volume 2 (% Utilisé)</br><i>Date de valeur : #hddtotalv2_value#</br>Date de collecte : #hddtotalv2_collect#</i>" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedv2#id#"></span></div>';
+			document.querySelector('#synovol2#id#').innerHTML = '<div id="synovol2#id#" class="tooltips" data-cmd_id="#hddpourcusedv2id#" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Syno Volume 2 (% Utilisé)</br><i>Date de valeur : #hddtotalv2_value#</br>Date de collecte : #hddtotalv2_collect#</i>" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedv2#id#"></span></div>';
 
 			if ('#hddpourcusedv2#' === '') {
 				document.querySelector('#hddpourcusedv2#id#').innerHTML = '<span></span>';
@@ -199,7 +199,7 @@
 		}
 
 		if ('#synovolumeusb_display#' == 'OK' && document.querySelector('#synovolusb#id#') !== null && document.querySelector('#hddpourcusedusb#id#') !== null) {
-			document.querySelector('#synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="cmd tooltips" data-cmd_id="#hddpourcusedusbid#" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Syno Volume USB (% Utilisé)</br><i>Date de valeur : #hddtotalusb_value#</br>Date de collecte : #hddtotalusb_collect#</i>" class="fab fa-usb" style="width:15px"></span> <span id="hddpourcusedusb#id#"></span></div>';
+			document.querySelector('#synovolusb#id#').innerHTML = '<div id="synovolusb#id#" class="tooltips" data-cmd_id="#hddpourcusedusbid#" style="margin-left:5px;display: #hddusedusb_display#;"><span title="Syno Volume USB (% Utilisé)</br><i>Date de valeur : #hddtotalusb_value#</br>Date de collecte : #hddtotalusb_collect#</i>" class="fab fa-usb" style="width:15px"></span> <span id="hddpourcusedusb#id#"></span></div>';
 		
 			if ('#hddpourcusedusb#' === '') {
 				document.querySelector('#hddpourcusedusb#id#').innerHTML = '<span></span>';
@@ -215,7 +215,7 @@
 		}
 
 		if ('#synovolumeesata_display#' == 'OK' && document.querySelector('#synovolesata#id#') !== null && document.querySelector('#hddpourcusedesata#id#') !== null) {
-			document.querySelector('#synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="cmd tooltips" data-cmd_id="#hddpourcusedesataid#" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Syno Volume eSATA (% Utilisé)</br><i>Date de valeur : #hddtotalesata_value#</br>Date de collecte : #hddtotalesata_collect#</i>" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedesata#id#"></span></div>';
+			document.querySelector('#synovolesata#id#').innerHTML = '<div id="synovolesata#id#" class="tooltips" data-cmd_id="#hddpourcusedesataid#" style="margin-left:5px;display: #hddusedesata_display#;"><span title="Syno Volume eSATA (% Utilisé)</br><i>Date de valeur : #hddtotalesata_value#</br>Date de collecte : #hddtotalesata_collect#</i>" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedesata#id#"></span></div>';
 		
 			if ('#hddpourcusedesata#' === '') {
 				document.querySelector('#hddpourcusedesata#id#').innerHTML = '<span></span>';				
